chore: formatting cahgnes and attempt at making swagger work
